replaced greeterConfig.cmake with greeterConfig.cmake.in, and fixed related cmake configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,19 @@ cmake_minimum_required(VERSION 3.30)
 
 project(Greeter
     LANGUAGES CXX
-    VERSION 1.0.0
+    VERSION 1.0.2
 )
 
 add_subdirectory("greeter")
 
 install(TARGETS greeter EXPORT greeterTargets FILE_SET greeterHeaders)
-set(DEST_DIR "share/greeter")
-install(EXPORT greeterTargets NAMESPACE greeter:: DESTINATION "${DEST_DIR}")
-install(FILES "cmake/greeterConfig.cmake" DESTINATION "${DEST_DIR}")
+install(EXPORT greeterTargets NAMESPACE greeter:: DESTINATION "share/cmake/greeter")
+
+include(CMakePackageConfigHelpers)
+configure_package_config_file(
+    "greeterConfig.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/greeterConfig.cmake"
+    INSTALL_DESTINATION "share/cmake/greeter"
+)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/greeterConfig.cmake" DESTINATION "share/cmake/greeter")
